refactor(vgm): eliminate addNote/clamp duplication across converters
- Remove duplicate addNote from Sn76489, Ay8910, Scc; reuse FmMidiUtil.addEvent
- Replace Sn76489MidiConverter.clamp with Math.clamp (Java 21+)
- Make Ym2151MidiConverter.midiChOffset final
- Add KC_MIDI_BASE constant; merge selectProgram cases 2 and 3